fix: extends type
BREAKING CHANGE: Change the default value of the second argument from `Record<string, unknown>` to
`{}`.

re #11

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -12,6 +12,12 @@
     "sourceType": "module"
   },
   "rules": {
-    "max-len": "error"
+    "max-len": ["error", {
+      "ignoreUrls": true,
+      "ignoreTemplateLiterals": true,
+      "ignoreStrings": true
+    }],
+    "@typescript-eslint/strict-boolean-expressions": "off",
+    "@typescript-eslint/ban-types": "off"
   }
 }
