--- a/.npmignore
+++ b/.npmignore
@@ -1,7 +1,9 @@
 .git
 .github/
+coverage/
 node_modules/
 src/
+test/
 .czrc
 .eslintrc*
 .gitignore
@@ -9,6 +11,7 @@ src/
 .npmrc
 .releaserc
 clean-package.config.json
+jest.config*
 package-lock.json
 package.json.backup
 rollup.config.mjs
