--- a/package.json
+++ b/package.json
@@ -9,13 +9,13 @@
   "scripts": {
     "build": "rm -rf dist & npx rollup -c",
     "commit": "npx cz",
-    "test": "exit 1"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
     "url": "https://github.com/mnrendra/ts-types-merge.git"
   },
-  "author": "mnrendra",
+  "author": "Muhammad Rendra (https://github.com/mnrendra)",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/mnrendra/ts-types-merge/issues"
@@ -24,6 +24,7 @@
   "devDependencies": {
     "@semantic-release/exec": "^6.0.3",
     "@semantic-release/git": "^10.0.1",
+    "@types/jest": "^29.5.1",
     "@types/node": "^20.1.3",
     "@typescript-eslint/eslint-plugin": "^5.59.5",
     "clean-package": "^2.2.0",
@@ -33,9 +34,11 @@
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-n": "^15.7.0",
     "eslint-plugin-promise": "^6.1.1",
+    "jest": "^29.5.0",
     "rollup": "^3.21.6",
     "rollup-plugin-dts": "^5.3.0",
     "semantic-release": "^21.0.2",
+    "ts-jest": "^29.1.0",
     "typescript": "^5.0.4"
   }
 }
